--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -2,3 +2,16 @@
   rel="stylesheet"
   href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
 />
+
+<!-- use the font -->
+<style>
+  body {
+    font-family: Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans,
+      Helvetica Neue, sans-serif;
+    font-size: smaller;
+  }
+  a {
+    color: inherit;
+    text-decoration: none;
+  }
+</style>
